--- a/assets/css/collapse.css
+++ b/assets/css/collapse.css
@@ -1,12 +1,14 @@
 .container {
     width:100%;
-    border:1px solid #d3d3d3;
+    /* border:1px solid #d3d3d3; */
+    border:1px solid #bab6b6;
 }
 .container div {
     width:100%;
 }
 .container .header {
-    background-color:#d3d3d3;
+    background-color:#8a8686;
+    /* background-color:#d3d3d3; */
     padding: 2px;
     cursor: pointer;
     font-weight: bold;
